--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -54,6 +54,9 @@ jobs:
         with:
           ruby-version: 3.4.4
           bundler-cache: true
+      
+      - name: Install Playwright browsers
+        run: npx --yes playwright install firefox --with-deps
 
       - name: Set up Rails
         run: |
