--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -34,7 +34,7 @@
         5432
     ],
     // Use 'postCreateCommand' to run commands after the container is created.
-    "postCreateCommand": "bundle install && bundle exec rake db:setup && npm install && npx --yes playwright install firefox --with-deps",
+    "postCreateCommand": "bundle install && bundle exec rake db:setup && npm install",
     // Configure tool-specific properties.
     "customizations": {
         "vscode": {
